# PandaSDLTemplate

./: .gitignore  .gitmodules  README.md  updatecmake.bat  updateres.bat
src/: CMakeLists.txt  main.cpp  new_template_project.cpp  new_template_project.h
src/gamestates/: main_menu_state.cpp  main_menu_state.h
